@@ -146,7 +146,7 @@ CLEANFILES += update-grub_lib
 	./config.status --file=$@:$<
 	chmod +x $@
 grub-mkconfig_SCRIPTS = 00_header 10_linux 10_hurd 10_freebsd 30_os-prober 40_custom
-ifeq ($(target_os), cygwin)
+ifeq ($(host_os), cygwin)
 grub-mkconfig_SCRIPTS += 10_windows
 endif
 
